<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="core_load_complete">加载完成</string>
    <string name="core_load_error">加载出错～</string>
    <string name="core_no_more_data">没有更多数据～</string>
    <string name="core_load_more_end">加载结束</string>

    <string name="core_loading">正在加载中…</string>
    <string name="core_switch_no_data">暂无数据</string>
    <string name="core_switch_loading">加载中…</string>
    <string name="core_switch_server_error">服务器错误</string>
    <string name="core_switch_not_network">无网络</string>
    <string name="core_switch_timeout">链接超时</string>
    <string name="core_switch_net_error">网络错误</string>
    <string name="core_view_no_data">亲，暂时没有相关数据</string>
</resources>